2025-10-19 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c:
	  Fix declaration-after-label issues.

2025-10-18 Janko Stamenović

	* sdas/linksrc/aslink.h
	  sdas/linksrc/lkbank.c
	  sdas/linksrc/lklex.c
	  sdas/linksrc/lklib.c
	  sdas/linksrc/lklibr.c
	  sdas/linksrc/lklist.c
	  sdas/linksrc/lkmain.c
	  sdas/linksrc/lkrloc3.c
	  sdld rebased to V05.50.4, unchanged sdld behaviour

2025-10-15 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c:
	  Improve passing of struct/union parameters for tlcs, ez80.

2025-10-17 Janko Stamenović
	  Fixing previous ChangeLog file references

2025-10-17 Janko Stamenović

	* sdas/linksrc/aslink.h
	  sdas/linksrc/lkmain.c
	  sdas/linksrc/lkout.c
	  sdas/linksrc/lkrloc.c
	  sdas/linksrc/lkrloc3.c
	  sdas/linksrc/lksdcdb.c
	  sdas/linksrc/lksym.c
	  One more sdld rebase step to upstream 

2025-10-15 Philipp Klaus Krause <philipp@colecovision.eu>

	* Merge rabbit branch.

2025-10-15 Philipp Klaus Krause <philipp@colecovision.eu>

	* sdcc/support/regression/tests/dynamiccstructret.c.in:
	  Disable a test for targets where it fails for known reasons.

2025-10-14 Janko Stamenović

	* sdas/linksrc/aslink.h
	  sdas/linksrc/lkar.h
	  sdas/linksrc/lkarea.c
	  sdas/linksrc/lkbank.c
	  sdas/linksrc/lkdata.c
	  sdas/linksrc/lkeval.c
	  sdas/linksrc/lkhead.c
	  sdas/linksrc/lklex.c
	  sdas/linksrc/lklibr.c
	  sdas/linksrc/lklist.c
	  sdas/linksrc/lkmain.c
	  sdas/linksrc/lknoice.c
	  sdas/linksrc/lkout.c
	  sdas/linksrc/lkrloc.c
	  sdas/linksrc/lkrloc3.c
	  sdas/linksrc/lksym.c
	  One more rebase step toward the new base for sdld

2025-10-14 Janko Stamenović

	* sdas/linksrc/aslink.h
	  sdas/linksrc/lklib.c
	  gcc15 sdld compatibilty, lklib loadfile_lib remove fclose on null

2025-10-12 Philipp Klaus Krause <philipp@colecovision.eu>

	* doc/sdccman.lyx:
	  Documentation updates for Rabbit and eZ80 ports.

2025-10-12 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/tests/far_rabbits.c.in: